# swd-console

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  library.properties
examples/flash_led/: flash_led.cpp  flash_led.ino
examples/test_command/: test_command.cpp  test_command.ino
firmware/: CMakeLists.txt  CommandParser.cpp  CommandParser.h  SWDSerial.cpp  SWDSerial.h  flash_led.cpp
host/: CMakeLists.txt  STLink.cpp  STLink.h  monitor.cpp
src/: SWDPrint.cpp  SWDPrint.h  SWDStream.cpp  SWDStream.h
